# brain-storm

./: .gitignore  README.md
backend/: alembic.ini  main.py  pyproject.toml  test_pipelines.py
backend/src/application/: services.py
backend/src/application/agents/: commands.py  handlers.py  queries.py
backend/src/application/conversations/: commands.py  handlers.py
backend/src/application/dialogs/: commands.py  dto.py  handlers.py
backend/src/application/messages/: dto.py
backend/src/application/pipelines/: commands.py  dto.py  handlers.py
backend/src/application/users/: commands.py  dto.py  handlers.py
backend/src/domain/agents/: entities.py  repository.py
backend/src/domain/auth/: services.py
backend/src/domain/common/: exceptions.py  unit_of_work.py
backend/src/domain/conversations/: entities.py  repository.py  services.py
backend/src/domain/dialogs/: entities.py  repository.py  services.py
backend/src/domain/messages/: entities.py  repository.py
backend/src/domain/pipelines/: entities.py  repository.py  services.py
backend/src/domain/users/: entities.py  repository.py
backend/src/infrastructure/: settings.py
backend/src/infrastructure/auth/: hashers.py  token_service.py
backend/src/infrastructure/db/: base.py  exception_handler.py  models.py  unit_of_work.py
backend/src/infrastructure/db/migrations/: env.py
backend/src/infrastructure/llm/: openai_client.py
backend/src/infrastructure/pipelines/: executor.py
backend/src/presentation/api/: auth.py  dependencies.py  exception_handlers.py  exceptions.py
(+26 files in other folders)
