[project]
name = "brain-storm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=1.6.2",
    "alembic>=1.16.5",
    "fastapi>=0.116.2",
    "passlib>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
